infrastructure/core/overlays/m720q/monitoring/kube-prometheus-stack/grafana-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    tailscale.com/tags: "tag:k8s-m720q"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: kube-prometheus-stack-grafana
      port:
        number: 80
  tls:
    - hosts:
        - m720q-grafana
